--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,8 +19,6 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password",class:"form-control" %>
   </div>
 
-<!-----------Issuer-------->
-<% if !current_user %>
   <div class="form-group">
     <%= f.label :fname %>
     <%= f.text_field :fname, autofocus: true, autocomplete: "fname",class:"form-control" %>
@@ -28,7 +26,7 @@
 
   <div class="form-group">
     <%= f.label :lname %>
-    <%= f.text_field :lname, autofocus: true, autocomplete: "lname",class:"form-control", required:  true %>
+    <%= f.text_field :lname, autofocus: true, autocomplete: "lname",class:"form-control" %>
   </div>
 
   <div class="form-group">
@@ -37,7 +35,7 @@
   <div class="form-group">
     <%= f.label "Select Library" %>
     <% libraries_array = Library.all.ids %>
-    <%= f.select  :library_id , options_for_select(libraries_array), {},class: 'form-control' %>
+    <%= f.select  :library_id , options_for_select(libraries_array), {},class:'form-control' %>
   </div>
 
   <div class="form-group">
@@ -45,8 +43,6 @@
     <%= f.text_field :balance, autofocus: true, autocomplete: "balance",class:"form-control", required:  true %>
   </div>
 
-<%end%>
-<!--------------------------->
   <div class="form-group text-center">
     <%= f.submit "Submit",class:"text-center btn btn-primary" %>
   </div>
