--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -3,7 +3,14 @@
 <% if @issuers_request%>
   <h3 class="text-center">Issuers Requests</h3>
   <table class="text-center container table table-hover table-bordered">
-    <tr class="bg-success text-light"><th>Email</th><th>First Name</th><th>Last Name</th><th>Image</th><th>Approve</th><th>Reject</th></tr>
+    <tr class="bg-success text-light">
+      <th>Email</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Image</th>
+      <th>Approve</th>
+      <th>Reject</th>
+    </tr>
     <% @issuers_request.each do |i| %>
       <tr>
         <td><%= i.email %></td>
