--- a/app/views/books/search_book.html.erb
+++ b/app/views/books/search_book.html.erb
@@ -1,20 +1,28 @@
-<% if @books.count>0 %>
-  <h1 class="text-center">Searched Books</h1>
-  <table class="table  table-bordered table-hover container text-center">
-    <tr class="bg-secondary"><th>ISBN</th><th>Title</th><th>Author</th><th>Year</th><th>No of Copies</th><th>Image</th><th>View Book</th></tr>
+<% if @books.count > 0 %>
+  <h1 class = 'text-center'>Searched Books</h1>
+  <table class = 'table  table-bordered table-hover container text-center'>
+    <tr class = 'bg-secondary'>
+      <th>ISBN</th>
+      <th>Title</th>
+      <th>Author</th>
+      <th>Year</th>
+      <th>No of Copies</th>
+      <th>Image</th>
+      <th>View Book</th>
+    </tr>
     <% @books.each do |book|%>
       <tr>
-        <td><%=book.isbn%></td>
-        <td><%=book.title%></td>
-        <td><%=book.author%></td>
-        <td><%=book.year%></td>
-        <td><%=book.no_of_copies%></td>
-        <td><%= image_tag book.images[0] ,size:'150x200'%></td>
-        <td><%= link_to "View Book",book_path(book),class:"btn btn-primary"%></td>
+        <td><%= book.isbn %></td>
+        <td><%= book.title %></td>
+        <td><%= book.author %></td>
+        <td><%= book.year %></td>
+        <td><%= book.no_of_copies %></td>
+        <td><%= image_tag book.images[0], size: '150x200' %></td>
+        <td><%= link_to 'View Book', book_path(book), class:'btn btn-primary' %></td>
       </tr>
-    <%end%>
+    <% end %>
   </table>
-<%else%>
+<% else %>
   <div class="alert alert-danger text-center">No Books found!</div>
-<%end%>
+<% end %>
 
