--- a/app/views/libraries/edit.html.erb
+++ b/app/views/libraries/edit.html.erb
@@ -1,12 +1,12 @@
-<div class="container col-md-3 pt-5">
-  <h1 class="text-center">Update Fine</h1>
-  <%= form_for @library,validate: true do |form|%>
-    <div class="form-group">
+<div class = 'container col-md-3 pt-5'>
+  <h1 class = 'text-center'>Update Fine</h1>
+  <%= form_for @library, validate: true do |form|%>
+    <div class = 'form-group'>
       <%= form.label :fine%>
-      <%= form.number_field :fine,min:0 ,class:"form-control"%>
+      <%= form.number_field :fine, min:0, class:'form-control'%>
     </div>
-    <div class="form-group">
-      <%= form.submit "Update Fine" ,class:"btn btn-primary",required: true %>
+    <div class='form-group'>
+      <%= form.submit "Update Fine",class:'btn btn-primary', required: true %>
     </div>
   <%end%>
 </div>
