--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -1,9 +1,12 @@
-<div class="container">
+<div class = 'container'>
   <br>
-  <h1 class="text-center ">Welcome to LMS !</h1>
+  <h1 class = 'text-center'>Welcome to LMS !</h1>
   <br>
-  <table class="table table-hover table-bordered text-center">
-    <tr class="bg-success text-light"><th>Library ID</th><th>Fine Amount</th></tr>
+  <table class = 'table table-hover table-bordered text-center'>
+    <tr class = 'bg-success text-light'>
+      <th>Library ID</th>
+      <th>Fine Amount</th>
+    </tr>
     <% @libraries.each do |lib| %>
       <tr>
         <td><%= lib.id %></td>
@@ -11,7 +14,7 @@
       </tr>
     <%end%>
   </table>
-  <%= link_to 'Sign in', new_user_session_path,class: "btn btn-primary " %>
-  <%= link_to 'Sign up as Issuer', new_user_registration_path,class: "btn btn-primary" %>
+  <%= link_to 'Sign in', new_user_session_path, class:'btn btn-primary' %>
+  <%= link_to 'Sign up as Issuer', new_user_registration_path, class:'btn btn-primary' %>
 </div>
 
