--- a/app/views/managers/index.html.erb
+++ b/app/views/managers/index.html.erb
@@ -1,33 +1,25 @@
-<h1 class="text-center">Managers</h1>
-<% i=0%>
-<div class="container">
+<h1 class = 'text-center'>Managers</h1>
+<div class = 'container'>
   <% @managers.each do |manager| %>
-    <%if i%3==0 %>
-      <div class="row ">
-    <%end%>
-      <div class="text-center col-md-3">
-        <div class="card" style="width: 18rem;">
+      <div class = 'text-center col-md-3'>
+        <div class = 'card card-style'>
           <% if manager.image%>
-            <%=  image_tag manager.image , size: '200x200',class:"card-img-top"%>
+            <%=  image_tag manager.image, size: '200x200', class:'card-img-top' %>
           <%end%>
-          <div class="card-body">
-            <h6 class="card-title">Email: <%= manager.email %></h6>
+          <div class = 'card-body'>
+            <h6 class = 'card-title'>Email: <%= manager.email %></h6>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Status: <%= manager.status.capitalize%></li>
-            <li class="list-group-item">  <%= link_to 'Change Status', manager_change_status_path(manager),method: :post,class:"card-link" %></li>
+          <ul class = 'list-group list-group-flush'>
+            <li class = 'list-group-item'>Status: <%= manager.status.capitalize %></li>
+            <li class = 'list-group-item'>  <%= link_to 'Change Status', manager_change_status_path(manager), method: :post, class:'card-link' %></li>
           </ul>
-          <div class="card-body">
-            <%= link_to "Edit", edit_manager_path(manager),class:"card-link" %>
-            <%= link_to "Delete",manager_path(manager),data:{confirm: "Do you really want to delete this?"},method: :delete,class:"card-link"%>
+          <div class = 'card-body'>
+            <%= link_to 'Edit', edit_manager_path(manager), class:'card-link' %>
+            <%= link_to 'Delete', manager_path(manager), data: {confirm: 'Do you really want to delete this?'}, method: :delete, class:'card-link' %>
           </div>
         </div>
       </div>
-      <div class="col-sm-1"></div>
-    <% i+=1 %>
-    <%if i%3==0 %>
-      </div>
-    <%end%>
-    <br>
-  <%end%>
+
+      <div class = 'col-sm-1'></div>
+  <% end %>
 </div>
