--- a/app/views/managers/new.html.erb
+++ b/app/views/managers/new.html.erb
@@ -1,32 +1,32 @@
-<div class="container pt-5 jumbotron col-md-3">
-  <h4 class="text-center ">Create New Manager</h2>
-  <%= form_for @manager,validate: true do |f| %>
-    <div class="form-group">
+<div class = 'container pt-5 jumbotron col-md-3'>
+  <h4 class = 'text-center'>Create New Manager</h2>
+  <%= form_for @manager, validate: true do |f| %>
+    <div class = 'form-group'>
       <%= f.label :email %>
-      <%= f.email_field :email, autofocus: true,required:true, autocomplete: "email",class:"form-control" %>
+      <%= f.email_field :email, autofocus: true, required:true, autocomplete: 'email',class:'form-control' %>
     </div>
 
-    <div class="form-group">
+    <div class = 'form-group'>
       <%= f.label :password %>
-      <%= f.password_field :password,required:true, autocomplete: "new-password",class:"form-control" %>
+      <%= f.password_field :password, required: true, autocomplete: 'new-password', class:'form-control' %>
     </div>
 
-    <div class="form-group">
+    <div class = 'form-group'>
       <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation,required:true, autocomplete: "new-password",class:"form-control" %>
+      <%= f.password_field :password_confirmation, required:true, autocomplete: 'new-password', class:'form-control' %>
     </div>
 
-    <div class="form-group">
-    <%= f.file_field :image ,class:"btn btn-primary form-control"%>
+    <div class = 'form-group'>
+    <%= f.file_field :image , class:'btn btn-primary form-control' %>
     </div>
 
-    <div class="form-group">
+    <div class = 'form-group'>
       <%= f.label :status %>
-      <%= f.select( :status , options_for_select([['Active','active'],['Inactive','inactive']]),{},{:class=>"form-control"})%>
+      <%= f.select( :status, options_for_select( [ ['Active', 'active'], ['Inactive', 'inactive']]), {}, class:'form-control') %>
     </div>
   <br>
-    <div class="form-group text-center">
-      <%= f.submit "Create",class:"btn btn-primary" %>
+    <div class = 'form-group text-center'>
+      <%= f.submit 'Create', class:'btn btn-primary' %>
     </div>
   <% end %>
 </div>
