all mailers set on models and indentation setup

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,11 @@
-<h1 class = 'text-center'><%= @book.title %></h1>
-<div class = 'row'>
-  <div class = 'col col-md-1'></div>
-  <div class = 'col col-md-2'>
-    <table class = 'table table-bordered table-hover text-center'>
-      <tr><th colspan = '2' class = 'bg-secondary'>Book Details</th></tr>
+<h1 class='text-center'><%= @book.title %></h1>
+<div class='row'>
+  <div class='col col-md-1'></div>
+  <div class='col col-md-2'>
+    <table class='table table-bordered table-hover text-center'>
+      <tr>
+        <th colspan='2' class='bg-secondary'>Book Details</th>
+      </tr>
       <tr>
         <td>Title</td>
         <td><%= @book.title %></td>
@@ -35,11 +37,11 @@
     </table>
   </div>
 
-  <div class = 'col col-md-2'></div>
+  <div class='col col-md-2'></div>
 
-  <div class = 'col col-md-6'>
+  <div class='col col-md-6'>
     <% @book.images.each do |image|%>
-    <%=  image_tag image , size: '200x200'%>
+    <%=  image_tag image, size: '200x200'%>
   <% end %>
   <br>
   <br>
@@ -50,5 +52,6 @@
     <%= link_to 'Edit', edit_book_path(@book), class:'btn btn-primary' %>
     <%= link_to 'Delete', book_path(@book), data: { confirm: 'Do you really want to delete this book?' }, method: :delete, class:'btn btn-danger' %>
   <% end %>
+
   </div>
 </div>
