--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,65 +1,64 @@
-<div class="container jumbotron pt-3 col-md-3">
-  <h2 class="text-center">Edit <%= resource_name.to_s.humanize %></h2>
+<div class='container jumbotron pt-3 col-md-3'>
+  <h2 class='text-center'>Edit <%= resource_name.to_s.humanize %></h2>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name),validate: true, html: { method: :put }) do |f| %>
-    <%= #render "devise/shared/error_messages", resource: resource %>
 
-    <div class="form-group">
+    <div class='form-group'>
       <%= f.label :email %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email",class:"form-control" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: 'email', class:'form-control' %>
     </div>
 
-    <div class="form-group">
+    <div class='form-group'>
       <%= f.label :fname %>
-      <%= f.text_field :fname, autofocus: true, autocomplete: "fname",class:"form-control" %>
+      <%= f.text_field :fname, autofocus: true, autocomplete: 'fname', class:'form-control' %>
     </div>
 
-    <div class="form-group">
+    <div class='form-group'>
       <%= f.label :lname %>
-      <%= f.text_field :lname, autofocus: true, autocomplete: "lname",class:"form-control" %>
+      <%= f.text_field :lname, autofocus: true, autocomplete: 'lname', class:'form-control' %>
     </div>
 
-    <div class="form-group">
+    <div class='form-group'>
       <%= f.label :password %>(*blank for unchanged)
-      <%= f.password_field :password, autocomplete: "new-password" ,class:"form-control" %>
+      <%= f.password_field :password, autocomplete: 'new-password', class:'form-control' %>
       <% if @minimum_password_length %>
         <%= @minimum_password_length %> characters minimum
       <% end %>
     </div>
 
-    <div class="form-group">
+    <div class='form-group'>
       <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" ,class:"form-control"%>
+      <%= f.password_field :password_confirmation, autocomplete: 'new-password', class:'form-control' %>
     </div>
 
-    <div class="form-group">
+    <div class='form-group'>
       <%= f.label :current_password %>
-      <%= f.password_field :current_password, autocomplete: "current-password" ,class:"form-control"%>
+      <%= f.password_field :current_password, autocomplete: 'current-password', class:'form-control' %>
     </div>
 
-    <div class="form-group">
+    <div class='form-group'>
       <%= f.label :image %>
-      <%= f.file_field :image, autofocus: true, autocomplete: "image",class:"form-control" %>
+      <%= f.file_field :image, autofocus: true, autocomplete: 'image', class:'form-control' %>
     </div>
 
-    <div class="form-group">
+    <div class='form-group'>
       <%= f.label :balance %>
-      <%= f.number_field :balance, autofocus: true, autocomplete: "balance",class:"form-control" %>
+      <%= f.number_field :balance, autofocus: true, autocomplete: 'balance', class:'form-control' %>
     </div>
 
-    <div class="form-group">
-      <%= f.label "Select Status" %>
-      <%= f.select( :status , options_for_select([['Active','active'],['Inactive','inactive']]) , {},class:'form-control') %>
+    <div class='form-group'>
+      <%= f.label 'Select Status' %>
+      <%= f.select(:status , options_for_select([['Active', 'active'], ['Inactive', 'inactive']]), {}, class:'form-control') %>
     </div>
 
-    <div class="form-group text-center">
-      <%= f.submit "Update",class:"btn btn-primary" %>
+    <div class='form-group text-center'>
+      <%= f.submit 'Update', class:'btn btn-primary' %>
     </div>
   <% end %>
 
   <b>Cancel my account</b>
 
-  <div class="text-center">
-    <p >Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete,class:"btn btn-danger" %></p>
+  <div class='text-center'>
+    <p >Unhappy? <%= button_to 'Cancel my account', registration_path(resource_name), data: { confirm: 'Are you sure?' }, method: :delete, class:'btn btn-danger' %></p>
   </div>
-  <%= link_to "Back", :back %>
+  <%= link_to 'Back', :back %>
 </div>
